--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,6 +1,9 @@
 [supervisord]
 nodaemon=true
 
+[program:vsftpd]
+command=/bin/bash -c "/usr/sbin/vsftpd"
+
 [program:mysql]
 command=/bin/bash -c "/usr/bin/mysqld_safe"
 
